--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <picture>
   <source media="(min-width:850px)" srcset="images/illustration-woman-online-desktop.svg">
   <source media="(max-width:849px)" srcset="images/illustration-woman-online-mobile.svg">
-  <img src="img_orange_flowers.jpg" alt="Flowers" >
+  <img src="images/illustration-woman-online-desktop.svg" alt="woman image" >
 </picture>
  <img src="images/illustration-box-desktop.svg" alt="" class="box">
     
@@ -88,7 +88,7 @@
 
 
   
-      <div class="faq--tab  visible--tab">
+      <div class="faq--tab  ">
    <div class="show--tab ">
     <h2>Do you provide additional support?</h2>
     <button class="show-Btn"><img src="images/icon-arrow-down.svg" alt="show--button--icon" class="show--button--icon"></button>
